<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fnoc.orcamento.orcamento.Main3Activity">

    <TextView
        android:id="@+id/txParedeTamanho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txParedeTamanho"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/vlPisoTamanho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"  />

    <RadioGroup
        android:id="@+id/rdParede"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="60dp"
        android:paddingTop="25dp">

        <RadioButton
            android:id="@+id/vlParedeTinta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/txParedeTinta1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/vlParedeTinta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txParedeTinta2"
            android:textSize="20sp"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/col1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="150dp">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txParedeOk" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txParedeCancelar" />
    </LinearLayout>
</LinearLayout>
