<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fnoc.orcamento.orcamento.Main2Activity">

    <TextView
        android:id="@+id/txPisoQuantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txPisoQuantidade"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/vlPisoQuantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/rdPorcelanato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp">

        <RadioButton
            android:id="@+id/vlPisoPorcelanato1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/txPisoPorcelanato1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/vlPisoPorcelanato2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txPisoPorcelanato2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/vlPisoPorcelanato3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txPisoPorcelanato3"
            android:textSize="20sp" />
    </RadioGroup>
</LinearLayout>
